# parallel_info_processing

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  README.md  lab1.c  lab1v.c
lab2/: CMakeLists.txt  README.md  lab2.c
lab3/: CMakeLists.txt  README.md  lab3.c
lab4/: CMakeLists.txt  README.md  lab4.c
lab5/: CMakeLists.txt  README.md  lab5.c
theory/: mpi.md  openmp.md
